--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "homepage": "https://github.com/guillermocorrea/ts-webpack-starter-kit#readme",
   "devDependencies": {
     "ts-loader": "^1.3.2",
+    "tslint": "^4.0.2",
+    "tslint-loader": "^3.3.0",
     "typescript": "^2.1.4",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
